# football

./: Cargo.toml
examples/: league_belgium_beebs.rs  league_search_playaround.rs  league_singapore_soccerway.rs  query_games.rs
src/: decrypt.rs  generic_structs.rs  lib.rs  main.rs  search.rs
src/livescore/: decrypt.rs  decrypted.txt  encrypted.txt  mod.rs
src/ranking/: mod.rs
src/ranking/beebs/: belgium.1a.html  cl.html  epl.html  epl.html.relevantinfo.json  france1.html  mod.rs  nations_league.html  ned1.html  search.rs  table.rs
src/ranking/soccerway/: mod.rs
