[package]
name = "football"
version = "0.2.0"
authors = ["Ward Muylaert <ward.muylaert@gmail.com>"]
edition = "2018"

[lib]
name = "football"
path = "src/lib.rs"

[[bin]]
name = "football-bin"
path = "src/main.rs"

[dependencies]
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
bitap = { "git"= "ssh://git@github.com/ward/bitap.git" }
