[package]
name = "football"
version = "0.2.0"
authors = ["Ward Muylaert <ward.muylaert@gmail.com>"]
edition = "2021"

[lib]
name = "football"
path = "src/lib.rs"

[dependencies]
log = "*"
reqwest = { version = "0.11.11", features = ["cookies", "json"] }
# Html scraping with css selectors
# Only for soccerway
scraper = "0.12.0"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
bitap = { "git"= "https://github.com/ward/bitap" }

# For examples, tests, benchmarks
[dev-dependencies]
env_logger = "0.8.4"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
